# cargo-upstall

./: Cargo.toml  README.md
src/: installed.rs  lib.rs  main.rs  manifest.rs
