[package]
name = "cargo-upstall"
version = "0.1.4"
authors = ["robert masen <r@robertmasen.pizza>"]
description = "A wrapper around cargo install that handles upgrades instead of failing"
license = "MIT"

[dependencies]
docopt = "1"
toml = "0.4"
serde = "1"
serde_derive = "1"
serde_json = "1"
reqwest = "0.8"

[dependencies.semver]
version = "0"
features = ["serde"]